# enowX-Coder-verversion

./: APPSHELL_RETURN.txt  CHANGELOG_A1_ORCHESTRATOR.md  COMPLETE_FIX_SUMMARY.md  COMPLETION_SUMMARY_FINAL.md  E2E_TESTING_GUIDE.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PHASE2-FINAL-FIXES.md  PHASE2-FIXES.md  POTENTIAL_ISSUES_REPORT.md  ROADMAP-PHASE2.md  TESTING.md  TESTING_SESSION_SUMMARY.md  TEST_REPORT_A1_ORCHESTRATOR.md  monitor-testing.sh  package.json  test-agent-tools.sh  test-phase1.sh  test-search-replace.sh  vite.config.ts
docs/: AGENTS.md  CLAUDE-DESKTOP-REVERSE-ENGINEERING.md  COMPLETE-ABC-SUMMARY.md  DEVLOG.md  ISSUES.md  ISSUES_ANALYSIS.md  PHASE3-AGENT-CHAINING.md  PHASE3-IMPLEMENTATION-PROGRESS.md  PHASE3-ORCHESTRATOR-VERBOSE.md  PHASE3-SUBAGENT-SPAWNING.md  TEST-REPORT.md  TESTING_CHECKLIST.md
scripts/: build-deb.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20260512000_mcp_servers.sql  20260512001_fts5_search.sql  20260512002_token_savings.sql  20260512003_plugins.sql  20260512004_builtin_flag.sql  20260512005_agent_config_fields.sql  20260512006_optimization_settings.sql  20260512007_permission_mode.sql  20260513001_orchestrator_timeline.sql
src-tauri/resources/: enowx-coder.desktop
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agents/: runner.rs
src-tauri/src/agents/prompts/: mod.rs  orchestrator.rs
src-tauri/src/commands/: agent.rs  chat.rs  file.rs  filesystem.rs  git.rs  mcp.rs  mod.rs  plugin.rs  rtk.rs  search.rs  settings.rs  terminal.rs
src-tauri/src/models/: agent_run.rs  file_node.rs  mod.rs
src-tauri/src/services/: agent_service.rs  chat_service.rs  drawing_service.rs  file_service.rs  git_service.rs  mcp_service.rs  mod.rs  plugin_service.rs  provider_service.rs  rtk_service.rs  search_service.rs  terminal_service.rs
src-tauri/src/tools/: executor.rs
src/components/chat/: AgentRunCard.tsx  AgentSelector.tsx  ChatInput.tsx  ChatMessage.tsx  OrchestratorTimeline.tsx
src/components/common/: ResizeHandle.tsx
src/components/ide/: CodePreview.tsx  DiffPanel.tsx  FileExplorer.tsx  FileTree.tsx  GitPanel.tsx  SearchPanel.tsx  TerminalPanel.tsx
src/components/layout/: AppShell.tsx  ChatHeader.tsx  LeftSidebar.tsx  RightSidebar.tsx  SessionSearch.tsx
src/components/settings/: AgentsTab.tsx  MCPServerManager.tsx  PermissionsTab.tsx  PluginManager.tsx  SettingsModal.tsx  TokenDashboard.tsx
src/components/sidebar/: ProjectSwitcher.tsx
src/hooks/: useResizableSidebar.ts
src/lib/: agentDetection.ts
src/stores/: useAgentStore.ts  useChatStore.ts  useUIStore.ts
src/types/: index.ts
