[package]
name = "enowx-coder"
version = "0.2.0"
description = "AI-Powered Development Environment"
authors = ["enowdev"]
license = "Apache-2.0"
repository = "https://github.com/enowdev/enowX-Coder"
edition = "2021"

[lib]
name = "enowx_coder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
walkdir = "2"
globset = "0.4"
regex = "1"
urlencoding = "2"
portable-pty = "0.9"
git2 = "0.20"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller binary

[profile.dev]
opt-level = 0
debug = true
